# event_agency

./: .flake8  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
apps/authentication/: models.py
apps/authentication/api/v1/: api.py  urls.py
apps/common/: models.py  utils.py
apps/events/: filters.py  models.py
apps/events/api/v1/: api.py  serializers.py
apps/users/: managers.py  models.py  urls.py
apps/users/api/v1/: api.py  serializers.py
apps/users/migrations/: 0001_initial.py
config/settings/: base.py  local.py
event_agency/: asgi.py  urls.py  wsgi.py
integrations/emails/: client.py
